--- a/app/core/templates/core/subcomponentshortages.html
+++ b/app/core/templates/core/subcomponentshortages.html
@@ -30,7 +30,8 @@
                         <th scope="col">Start Time</th>
                         <th scope="col">Line</th>
                         <th scope="col">On Hand</th>
-                        <th scope="col">Shortage</th>
+                        <th scope="col">Scheduled Shortage</th>
+                        <th scope="col">Unscheduled Shortage</th>
                         <th scope="col">Max Prod. Qty</th>
                         <th scope="col">Next Order Due</th>
                     </tr>
@@ -44,7 +45,8 @@
                         <td>{{ shortage.start_time|floatformat:2 }}</td>
                         <td>{{ shortage.prod_line }}</td>
                         <td>{{ shortage.subcomponent_onhand_qty|floatformat:4 }} {{ shortage.standard_uom }}</td>
-                        <td>{{ shortage.subcomponent_shortage|floatformat:2 }} {{ shortage.standard_uom }}</td>
+                        <td>{% if not shortage.three_wk_short == 0 %}{{ shortage.three_wk_short|floatformat:2 }} {{ shortage.standard_uom }}{% endif %}</td>
+                        <td>{% if not shortage.unscheduled_short == 0 %}{{ shortage.unscheduled_short|floatformat:2 }} {{ shortage.standard_uom }}{% endif %}</td>
                         <td>{{ shortage.max_possible_blend|floatformat:2 }}</td>
                         <td>{{ shortage.next_order_due }}</td>
                     </tr>
