--- a/app/templates/navbars/office-navbar-items.html
+++ b/app/templates/navbars/office-navbar-items.html
@@ -4,6 +4,9 @@
 <li class="nav-item">
     <a class="nav-link" href="/core/lot-num-records">Lot Numbers</a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href="/prodverse/production-schedule">Production Schedule</a>
+</li>
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Blend Auditing
