--- a/app/core/templates/core/inventorycounts/countrecords.html
+++ b/app/core/templates/core/inventorycounts/countrecords.html
@@ -20,7 +20,7 @@
         <table class="table text-left table-bordered table-hover">
             <thead class="thead-dark">
                 <tr>
-                    <th scope="col"></th>
+                    {% if user.is_staff %}<th scope="col"></th>{% endif %}
                     <th scope="col">Blend</th>
                     <th scope="col">Description</th>
                     <th scope="col">Exp. Qty</th>
@@ -35,9 +35,9 @@
             
             {% for item in current_page.object_list %}
                 <tr {% if not item.counted %}class="notCounted"{% endif %}>
-                    <td class='text-center'>
+                    {% if user.is_staff %}<td class='text-center'>
                         <input type="checkbox" name={{ item.id }} class="reportCheckBox"></input>
-                    </td>
+                    </td>{% endif %}
                     <td>{{ item.item_code }}</td>
                     <td>{{ item.item_description }}</td>
                     <td>{{ item.expected_quantity|floatformat:0 }}</td>
