--- a/app/core/templates/core/blendschedules/deskoneschedule.html
+++ b/app/core/templates/core/blendschedules/deskoneschedule.html
@@ -1,5 +1,5 @@
 {% if desk_one_blends %}
-    <button type="button" class="btn btn-outline-danger deleteBtn" onclick="window.location.href='http://localhost:1337/core/clear-entered-blends/?blend-area=Desk_1';">
+    <button type="button" class="btn btn-outline-danger deleteBtn" onclick="window.location.href='http://192.168.178.169:1337/core/clear-entered-blends/?blend-area=Desk_1';">
         Clear Entered Blends
     </button>
     <div class="table-responsive-sm">
