specsheet js updates

--- a/app/prodverse/templates/prodverse/specsheet.html
+++ b/app/prodverse/templates/prodverse/specsheet.html
@@ -7,6 +7,9 @@
 {% block scripts %} 
     <link rel="shortcut icon" type="image/png" href="{% static 'core\kpkhomescrico.png' %}">
     <link rel="apple-touch-icon" href="{% static 'core\kpkhomescrico.png' %}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.0/html2canvas.min.js"></script>
+    <script type="module" src="{% static 'prodverse/js/pageModules/specsheet.js'%}"></script>
 {% endblock scripts %}
 
 
@@ -31,15 +34,22 @@
     .larger-checkbox {
         transform: scale(2);
     }
+
+    input[type='checkbox'] {
+        margin-right: .5rem;
+    }
+    .hidden {
+        display: none;
+    }
   </style>
 
 <div style="max-width: 800px">
     <table class="specsheet-table table">
         <thead>
         <tr>
+            <th class="h2 align-middle" colspan="5">{{ item_description }}</th>
             <th></th>
-            <th></th>
-            <th class="h2 align-middle">{{ item_description }}</th>
+            <th ></th>
             <th class="h2 align-middle" style="text-align: right;">{{ item_code }}</th>
         </tr>
         </thead>
@@ -49,48 +59,50 @@
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td class="align-middle">Special Notes</td>
-                <td class="align-middle">{{ notes }}</td>
+                <td class="align-middle" colspan="2">{{ notes }}</td>
             </tr>
 
             <tr>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td>Product Class</td>
-                <td>{{ product_class }}</td>
+                <td colspan="2">{{ product_class }}</td>
             </tr>
 
             <tr>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td>Water Flush</td>
-                <td>{{ water_flush }}</td>
+                <td colspan="2">{{ water_flush }}</td>
             </tr>
             <tr>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td>Solvent Flush</td>
-                <td>{{ solvent_flush }}</td>
+                <td colspan="2">{{ solvent_flush }}</td>
             </tr>
             <tr>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td>Soap Flush</td>
-                <td>{{ soap_flush }}</td>
+                <td colspan="2">{{ soap_flush }}</td>
             </tr>
             <tr>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td>Oil Flush</td>
-                <td>{{ oil_flush }}</td>
+                <td colspan="2">{{ oil_flush }}</td>
             </tr>
             <tr>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td>Polish Flush</td>
-                <td>{{ polish_flush }}</td>
+                <td colspan="2">{{ polish_flush }}</td>
             </tr>
 
             <tr>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -99,14 +111,14 @@
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td>Current Footprint</td>
-                <td>{{ pallet_footprint }}</td>
+                <td colspan="2">{{ pallet_footprint }}</td>
             </tr>
 
             <tr>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td>UPC</td>
-                <td>{% if upc|length >= 11 %}
+                <td colspan="2">{% if upc|length >= 11 %}
                     {{ upc|slice:":5" }} {{ upc|slice:"5:10" }} {{ upc|slice:"10:11" }}
                 {% else %}
                     {{ upc }}
@@ -117,7 +129,7 @@
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td>SCC</td>
-                <td>{% if scc|length >= 13 %}
+                <td colspan="2">{% if scc|length >= 13 %}
                     {{ scc|slice:":1" }} {{ scc|slice:"1:3" }} {{ scc|slice:"3:8" }} {{ scc|slice:"8:13" }} {{ scc|slice:"13:14" }}
                 {% else %}
                     {{ scc }}
@@ -128,39 +140,39 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
+                <td colspan="2"></td>
             </tr>
 
             <tr>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td>US Case Marking</td>
-                <td>{{ us_dot }}</td>
+                <td colspan="2">{{ us_dot }}</td>
             </tr>
             <tr>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td>Special Notes</td>
-                <td>{{ special_notes }}</td>
+                <td colspan="2">{{ special_notes }}</td>
             </tr>
             <tr>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td>EU Case Marking</td>
-                <td>{{ eu_haz }}</td>
+                <td colspan="2">{{ eu_haz }}</td>
             </tr>
             <tr>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
                 <td>EU Bottle Marking</td>
-                <td>{{ haz_symbols }}</td>
+                <td colspan="2">{{ haz_symbols }}</td>
             </tr>
 
             <tr>
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
+                <td colspan="2"></td>
             </tr>
         </tbody>
     </table>
@@ -205,16 +217,20 @@
         <tr>
           <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
           <td class="align-middle"><input type="checkbox" class="larger-checkbox"></td>
-          <td>{{ bom.component_item_code }}</td>
-          <td>{{ bom.component_item_description }}</td>
-          <td>{% if bom.location %}{{ bom.location }}{% else %}-{% endif %}</td>
-          <td>{% if bom.weight_code %}{{ bom.weight_code }}{% else %}-{% endif %}</td>
-          <td>{{ bom.qtyperbill|floatformat:4 }}</td>
+          <td class="align-middle">{{ bom.component_item_code }}</td>
+          <td class="align-middle">{{ bom.component_item_description }}</td>
+          <td class="align-middle">{% if bom.location %}{{ bom.location }}{% else %}-{% endif %}</td>
+          <td class="align-middle">{% if bom.weight_code %}{{ bom.weight_code }}{% else %}-{% endif %}</td>
+          <td class="align-middle">{{ bom.qtyperbill|floatformat:4 }}</td>
         </tr>
     {% endfor %}
     </tbody>
   </table>
 </div>
+<div class="commentary">
+    <textarea rows="4" cols="105"></textarea>
+</div>
+
 <div class="signature-container">
     <div class="signature-input">
       <input type="text" id="signature1" placeholder="Enter your signature">
@@ -228,61 +244,6 @@
   </div>
 
   <button id="savePdf">Save as PDF</button>
-
-  <script>
-    // function to draw a signature on a canvas
-    function drawSignature(signature, canvas) {
-      var ctx = canvas.getContext("2d");
-      canvas.width = canvas.clientWidth * 2;
-      canvas.height = canvas.clientHeight * 2;
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      ctx.scale(2,2);
-      ctx.font = "20px Rage, Lucida Handwriting, cursive";
-      ctx.fillText(signature, 5, 18);
-    }
-
-    // add event listeners to text input fields
-    $("#signature1").on("input", function() {
-      drawSignature($(this).val(), document.getElementById("canvas1"));
-    });
-
-    $("#signature2").on("input", function() {
-      drawSignature($(this).val(), document.getElementById("canvas2"));
-    });
-
-    // function to save the current page as a PDF
-    function savePdf() {
-      var doc = new jsPDF();
-      doc.addHTML(document.body, function() {
-        doc.save("document.pdf");
-      });
-    }
-
-    // add event listener to the Save PDF button
-    $("#savePdf").on("click", function() {
-        var canvas = document.createElement("canvas");
-        canvas.width = 2550; // 8.5 x 300 pixels per inch
-        canvas.height = 3300; // 11 x 300 pixels per inch
-        var ctx = canvas.getContext("2d");
-        
-        // render the page onto the canvas
-        var pageHtml = document.documentElement.outerHTML;
-        var pageImg = new Image();
-        pageImg.src = "data:image/svg+xml," + encodeURIComponent(pageHtml);
-        pageImg.onload = function() {
-          ctx.drawImage(pageImg, 0, 0);
-        
-          // convert the canvas to a JPEG image
-          var dataUrl = canvas.toDataURL("image/jpeg", 1.0);
-        
-          // prompt the user to download/save the JPEG image
-          var link = document.createElement("a");
-          link.download = "page.jpeg";
-          link.href = dataUrl;
-          link.click();
-        };
-      });
-  </script>
 
 {% endblock content %}
 <!-- End Body -->
