--- a/app/prodverse/templates/prodverse/specsheet.html
+++ b/app/prodverse/templates/prodverse/specsheet.html
@@ -10,6 +10,7 @@
     <link rel="apple-touch-icon" href="{% static 'core\kpkhomescrico.png' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.0/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/exif-js/2.3.0/exif.min.js"></script>
     <script type="module" src="{% static 'prodverse/js/pageModules/specsheet.js'%}"></script>
 {% endblock scripts %}
 
